# trident_one_vehicle_launch

sample_vehicle_description/config/: trident_one.param.yaml
trident_one_description/: CMakeLists.txt  package.xml
trident_one_description/config/: simulator_model.param.yaml  trident_one.param.yaml
trident_one_description/mesh/: trident1.stl
trident_one_description/urdf/: trident_one.xacro
trident_one_interface/: CMakeLists.txt  package.xml
trident_one_interface/include/trident_one_interface/: trident_one_interface.hpp
trident_one_interface/launch/: interface.launch.xml
trident_one_interface/src/: trident_one_interface.cpp  trident_one_interface_node.cpp
trident_one_launch/: CMakeLists.txt  package.xml
trident_one_launch/launch/: vehicle_interface.launch.xml
